--- a/Week-005 CSS/Assignment/2. More on CSS/Q5.html
+++ b/Week-005 CSS/Assignment/2. More on CSS/Q5.html
@@ -16,12 +16,15 @@
         text-align: center;
       }
       .container .img-gfonts img {
-        width: 350px;
+        width: 300px;
         display: block;
         margin-left: auto;
         margin-right: auto;
+        padding: 20px;
+        border-style: ridge;
         /* width: 50%; */
       }
+
       .container .para-mont p {
         font-family: montserrat;
       }
@@ -34,7 +37,7 @@
       </div>
       <div class="img-gfonts">
         <img
-          src="https://upload.wikimedia.org/wikipedia/commons/2/2d/Montserrat_Font.png"
+          src="https://www.gstatic.com/images/icons/material/apps/fonts/1x/catalog/v5/opengraph_color.png"
           alt="googlefonts"
         />
       </div>
