--- a/Week-005 CSS/Assignment/2. More on CSS/Q7.html
+++ b/Week-005 CSS/Assignment/2. More on CSS/Q7.html
@@ -7,7 +7,7 @@
     <style>
       .container {
         border: 2px solid black;
-        width: 310px;
+        width: 320px;
         height: 235px;
         margin: 10px auto;
         display: flex;
@@ -24,20 +24,17 @@
       }
       .container .img img {
         display: block;
-
         /* width: 250px; */
         margin: 10px;
         max-width: calc(100% - 20px);
         max-height: auto;
       }
       .container:hover {
-        /* display: block; */
-
-        /* width: 250px; */
-        /* margin: 10px;
-        max-width: calc(100% - 20px);
-        max-height: auto; */
         opacity: 0.5;
+      }
+      .container .para span {
+        margin: 5px;
+        font-weight: bolder;
       }
     </style>
   </head>
