--- a/Week-007 Grid and Media Query/Assignment/Assignment/Media Query Assignment/Q1.html
+++ b/Week-007 Grid and Media Query/Assignment/Assignment/Media Query Assignment/Q1.html
@@ -16,12 +16,13 @@
         justify-content: center;
         align-items: center;
         font-size: 75%;
+        /* padding:20px */
       }
       @media (max-width: 600px) {
         .header {
           background-color: blue;
         }
-      }`
+      }
     </style>
   </head>
   <body>
