--- a/Projects/Project-3 Redbus Clone/index.html
+++ b/Projects/Project-3 Redbus Clone/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="" />
     <meta name="author" content="Amit Arora" />
-    <link rel="stylesheet" href="st.css" />
+    <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link rel="icon" href="./assets/favicon.ico" type="image/x-icon" />
