--- a/Week-010 Git and Github/Question-6/Gmail clone/index.html
+++ b/Week-010 Git and Github/Question-6/Gmail clone/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav class="w-16 bg-indigo-50 h-screen flex flex-col">
+    <nav class="w-16 bg-indigo-50 h-screen flex flex-row relative">
       <div
-        class="flex flex-col text-center justify-center items-center p-4 ml-0.5 mr-1 hover:bg-indigo-200 hover:rounded-full hover:resize"
+        class="absolute flex flex-col text-center justify-center items-center px-3.5 py-3.5 ml-1.5 mt-1.5 hover:bg-slate-200 hover:rounded-full"
       >
         <svg
           xmlns="http://www.w3.org/2000/svg"
@@ -21,6 +21,30 @@
         >
           <path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z" style="" />
         </svg>
+      </div>
+      <div class="">
+        <div class="">
+          <div
+            class="mt-20 flex flex-col text-center justify-center items-center px-3.5 py-2.5 ml-1.5 mt-1.5 hover:bg-slate-200 hover:rounded-full"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              height="20"
+              viewBox="0 -960 960 960"
+              width="20"
+              focusable="false"
+              class="hover:bg-slate-200 hover:rounded-sm"
+            >
+              <path
+                d="M168-192q-29.7 0-50.85-21.162Q96-234.324 96-264.04v-432.243Q96-726 117.15-747T168-768h385q-2 17-1 35.5t6 36.5H168l312 179 140-81q14 13 37 24t41 16L480-432 168-611v347h624v-294.456Q812-563 829.5-572.5T864-594v329.771Q864-234 842.5-213T792-192H168Zm0-504v432-432Zm576 72q-50 0-85-35t-35-85q0-50 35-85t85-35q50 0 85 35t35 85q0 50-35 85t-85 35Z"
+              />
+            </svg>
+          </div>
+          <p class="text-xs text-center ml-1.5 -mt-1.5">Mail</p>
+        </div>
+
+        <div></div>
+        <div></div>
       </div>
     </nav>
   </body>
